# hrms_bio

./: .env.example  .pre-commit-config.yaml  =1.24.0  =1.3.0  =4.8.0  MANIFEST.in  README.md  SETUP_REFERENCE.md  fix_dependencies.sh  optimized_dependency_fix.sh  pyproject.toml  quick_fix.sh  quick_fix_cmake.sh  requirements.txt  setup.py  setup_hrms_biometric.sh
hrms_biometric/: hooks.py  modules.txt  patches.txt  permissions.py
hrms_biometric/bio_facerecognition/api/: analytics_dashboard.py  data_validation.py  enhanced_face_recognition.py  face_recognition_settings.py  helper_functions_utilities.py  image_processing.py  mobile_notifications.py  multi_location_support.py  notification_helpers.py  payroll_integration.py  utilities.py
hrms_biometric/bio_facerecognition/doctype/attendance_conflict_log/: attendance_conflict_log.js  attendance_conflict_log.json  attendance_conflict_log.py  test_attendance_conflict_log.py
hrms_biometric/bio_facerecognition/doctype/attendance_kiosk/: attendance_kiosk.js  attendance_kiosk.json  attendance_kiosk.py  test_attendance_kiosk.py
hrms_biometric/bio_facerecognition/doctype/attendance_report/: attendance_report.js  attendance_report.json  attendance_report.py  test_attendance_report.py
hrms_biometric/bio_facerecognition/doctype/employee_attendance/: employee_attendance.js  employee_attendance.json  employee_attendance.py  test_employee_attendance.py
hrms_biometric/bio_facerecognition/doctype/employee_face_recognition/: employee_face_recognition.js  employee_face_recognition.json  employee_face_recognition.py  test_employee_face_recognition.py
hrms_biometric/bio_facerecognition/doctype/employee_notification_settings/: employee_notification_settings.js  employee_notification_settings.json  employee_notification_settings.py  test_employee_notification_settings.py
hrms_biometric/bio_facerecognition/doctype/face_recognition_settings/: face_recognition_settings.js  face_recognition_settings.json  face_recognition_settings.py  test_face_recognition_settings.py
hrms_biometric/bio_facerecognition/doctype/multi_location_sync_log/: multi_location_sync_log.js  multi_location_sync_log.json  multi_location_sync_log.py  test_multi_location_sync_log.py
hrms_biometric/bio_facerecognition/doctype/notification_activity_log/: notification_activity_log.js  notification_activity_log.json  notification_activity_log.py  test_notification_activity_log.py
hrms_biometric/bio_facerecognition/doctype/payroll_summary/: payroll_summary.js  payroll_summary.json  payroll_summary.py  test_payroll_summary.py
hrms_biometric/bio_facerecognition/doctype/whatsapp_settings/: test_whatsapp_settings.py  whatsapp_settings.js  whatsapp_settings.json  whatsapp_settings.py
hrms_biometric/config/: desktop.py
hrms_biometric/hrms_biometric/: permissions.py
hrms_biometric/patches/: __init__.py
hrms_biometric/patches/v0_0/: __init__.py  cleanup_orphaned_records.py  create_default_roles_and_permissions.py  create_default_settings.py  initial_setup.py  migrate_existing_attendance_data.py  optimize_database_indexes.py  setup_custom_fields.py
hrms_biometric/utils/: __init__.py  jinja_methods.py
install/: __init__.py  setup.py
