[project]
name = "hrms_biometric"
version = "0.0.1"
authors = [
    { name = "BluePhoenix", email = "bluephoenix00995@gmail.com"}
]
description = "Biometric face recognition attendance system for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["frappe", "erpnext", "biometric", "face-recognition", "attendance"]

# Core dependencies
dependencies = [
    "face-recognition>=1.3.0,<2.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "pandas>=2.0.0,<3.0.0",
    "xlsxwriter>=3.1.0,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0", 
    "ruff>=0.1.0",
    "pre-commit>=3.3.0",
]

advanced = [
    "dlib>=19.24.0,<20.0.0",
    "opencv-contrib-python>=4.8.0,<5.0.0",
    "mediapipe>=0.10.0,<1.0.0",
    "scikit-image>=0.21.0,<1.0.0",
]

full = [
    "dlib>=19.24.0,<20.0.0",
    "opencv-contrib-python>=4.8.0,<5.0.0",
    "mediapipe>=0.10.0,<1.0.0", 
    "scikit-image>=0.21.0,<1.0.0",
    "scipy>=1.11.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "redis>=4.5.0,<6.0.0",
    "celery>=5.3.0,<6.0.0",
    "twilio>=8.10.0,<9.0.0",
    "imageio>=2.31.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/Thunder-BluePhoenix/hrms_bio"
Repository = "https://github.com/Thunder-BluePhoenix/hrms_bio.git"
"Bug Tracker" = "https://github.com/Thunder-BluePhoenix/hrms_bio/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hrms_biometric*"]
exclude = ["tests*", "*.tests*", "node_modules*"]

# Ruff configuration (Python linting)
[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    "migrations",
    "*.egg-info", 
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = [
    "E501", # line too long (handled by formatter)
    "F401", # unused imports (common in __init__.py)
    "B018", # useless expression
    "F403", # unable to detect undefined names from * import
    "F405", # can't detect undefined names from * import
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

# Black configuration (Python formatting)
[tool.black]
line-length = 110
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# Pytest configuration (testing)
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["hrms_biometric/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["-ra", "-q", "--strict-markers"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["hrms_biometric"]
omit = [
    "*/tests/*",
    "*/migrations/*", 
    "*/__pycache__/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.10" 
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations/", "build/", "dist/"]

# Frappe-specific settings
[tool.frappe]
app_name = "hrms_biometric"
app_title = "HRMS Biometric"
app_publisher = "BluePhoenix"